fix(ui): remove double right scrollbar and  fix some page height

--- a/gravitee-am-ui/src/app/components/sidenav/sidenav.component.scss
+++ b/gravitee-am-ui/src/app/components/sidenav/sidenav.component.scss
@@ -1,5 +1,5 @@
 .gio-side-nav {
-  height: calc(100vh - 68px);
+  height: calc(100vh - 70px);
   z-index: 1;
 }
 
