--- a/gravitee-am-ui/src/app/components/submenu/submenu.component.scss
+++ b/gravitee-am-ui/src/app/components/submenu/submenu.component.scss
@@ -23,7 +23,7 @@
   height: 100vh;
 
   &.reduced {
-    height: calc(100vh - 68px);
+    height: calc(100vh - 70px);
   }
 }
 
