--- a/gravitee-am-ui/src/app/domain/components/dashboard/dashboard.component.scss
+++ b/gravitee-am-ui/src/app/domain/components/dashboard/dashboard.component.scss
@@ -1,3 +1,3 @@
 .loading {
-  height: calc(100vh - 220px);
+  height: calc(100vh - 240px);
 }
